refractor teleops for readability & use new launcher code